--- a/index.html
+++ b/index.html
@@ -1,86 +1,141 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>My Trendsetting Website</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* General Reset */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
             color: #333;
         }
 
+        /* Header Section */
         header {
-            background-color: #0078d4;
+            background-color: #111; /* Dark background */
             color: #fff;
-            padding: 20px;
+            padding: 40px 20px;
             text-align: center;
+            position: relative;
         }
 
+        header h1 {
+            font-size: 3rem;
+            font-weight: bold;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
+
+        /* Logo */
+        .logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 1.5rem;
+            color: #fff;
+        }
+
+        /* Navigation */
         nav {
-            text-align: center;
-            margin: 20px 0;
+            position: absolute;
+            top: 20px;
+            right: 20px;
         }
 
-            nav a {
-                text-decoration: none;
-                margin: 0 10px;
-                color: #0078d4;
-            }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1rem;
+        }
 
-                nav a:hover {
-                    text-decoration: underline;
-                }
+        nav a:hover {
+            text-decoration: underline;
+        }
 
+        /* Main Content Section */
         main {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 40px 20px;
+            max-width: 1200px;
+            margin: 40px auto;
+            display: flex;
+            gap: 20px;
+            justify-content: center;
         }
 
+        .section {
+            background: #fff;
+            flex: 1;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        .section h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+
+        .section p {
+            font-size: 1rem;
+            color: #666;
+        }
+
+        /* Footer Section */
         footer {
             text-align: center;
-            padding: 10px;
-            background: #333;
+            padding: 20px;
+            background: #111;
             color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <h1>Welcome to My Personal Website</h1>
-        <p>Your tagline or introduction here</p>
+        <div class="logo">▲</div>
+        <h1>WE ARE TRENDSETTERS.</h1>
+        <p>Leading the way with style and innovation.</p>
+        <nav>
+            <a href="#work">Work</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+
+    <!-- Main Content -->
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Write something about yourself here.</p>
-        </section>
-        <section id="projects">
-            <h2>My Projects</h2>
-            <p>Highlight your projects or portfolio items here.</p>
-        </section>
-        <section id="contact">
+        <div class="section">
+            <h2>Our Work</h2>
+            <p>Discover our latest projects and achievements.</p>
+        </div>
+        <div class="section">
+            <h2>About Us</h2>
+            <p>Learn more about who we are and what we do.</p>
+        </div>
+        <div class="section">
             <h2>Contact</h2>
-            <p>Provide your email or a contact form here.</p>
-        </section>
+            <p>Get in touch with us for collaborations.</p>
+        </div>
     </main>
+
+    <!-- Footer -->
     <footer>
-        &copy; 2024 Your Name. All rights reserved.
+        &copy; 2024 Trendsetters. All rights reserved.
     </footer>
 </body>
 </html>
+
