--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <!-- Header -->
     <header>
         <div class="logo">▲</div>
-        <h1>WE ARE TRENDSETTERS.</h1>
-        <p>Leading the way with style and innovation.</p>
+        <h1>MAXWELL EVANS.</h1>
+        <p>This is my personal website.</p>
         <nav>
             <a href="#work">Work</a>
             <a href="#about">About</a>
