--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2024 Trendsetters. All rights reserved.
+        &copy; 2024 Maxwell Evans. All rights reserved.
     </footer>
 </body>
 </html>
