--- a/index.html
+++ b/index.html
@@ -3,138 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Trendsetting Website</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        /* Header Section */
-        header {
-            background-color: #111; /* Dark background */
-            color: #fff;
-            padding: 40px 20px;
-            text-align: center;
-            position: relative;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            font-weight: bold;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            margin-top: 10px;
-        }
-
-        /* Logo */
-        .logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 1.5rem;
-            color: #fff;
-        }
-
-        /* Navigation */
-        nav {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 1rem;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        /* Main Content Section */
-        main {
-            padding: 40px 20px;
-            max-width: 1200px;
-            margin: 40px auto;
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-        }
-
-        .section {
-            background: #fff;
-            flex: 1;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-
-        .section h2 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-
-        .section p {
-            font-size: 1rem;
-            color: #666;
-        }
-
-        /* Footer Section */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #111;
-            color: #fff;
-            margin-top: 20px;
-        }
-    </style>
+    <title>Home - My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <div class="logo">▲</div>
-        <h1>MAXWELL EVANS.</h1>
-        <p>This is my personal website.</p>
-        <nav>
-            <a href="#work">Work</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <h1>Welcome to My Website</h1>
+        <p>Explore my skills, projects, and more.</p>
     </header>
-
-    <!-- Main Content -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="skills.html">Skill Sets</a>
+    </nav>
     <main>
-        <div class="section">
-            <h2>Our Work</h2>
-            <p>Discover our latest projects and achievements.</p>
-        </div>
-        <div class="section">
-            <h2>About Us</h2>
-            <p>Learn more about who we are and what we do.</p>
-        </div>
-        <div class="section">
-            <h2>Contact</h2>
-            <p>Get in touch with us for collaborations.</p>
-        </div>
+        <h2>Purpose of the Site</h2>
+        <p>This site serves as a showcase of my personal website of skills, experiences, and accomplishments as I pursue professional opportunities.</p>
     </main>
-
-    <!-- Footer -->
     <footer>
-        &copy; 2024 Maxwell Evans. All rights reserved.
+        &copy; 2024 Your Name. All rights reserved.
     </footer>
 </body>
 </html>
