--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
     </nav>
     <main>
         <h2>Personal Information</h2>
-        <p>Hi, I'm [Your Name]! I am passionate about technology, problem-solving, and building innovative solutions.</p>
+        <p>Hi, I'm Maxwell Evans! I am passionate about following Jesus, problem-solving, and building innovative solutions.</p>
     </main>
     <footer>
-        &copy; 2024 Your Name. All rights reserved.
+        &copy; 2024 Maxwell Evans. All rights reserved.
     </footer>
 </body>
 </html>
