--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>This site serves as a showcase of my personal website of skills, experiences, and accomplishments as I pursue professional opportunities.</p>
     </main>
     <footer>
-        &copy; 2024 Your Name. All rights reserved.
+        &copy; 2024 Maxwell Evans. All rights reserved.
     </footer>
 </body>
 </html>
