--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="about">
     <header>
         <h1>About Me</h1>
     </header>
