--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Home - My Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
     <header>
         <h1>Welcome to My Website</h1>
         <p>Explore my skills, projects, and more.</p>
+        <a href="#explore">Learn More</a>
     </header>
     <nav>
         <a href="index.html">Home</a>
