--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Website</title>
+    <title>Home - My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
     <header>
         <h1>Welcome to My Website</h1>
         <p>Explore my skills, projects, and more.</p>
-        <a href="#explore">Learn More</a>
+        <a href="#introduction">Learn More</a> <!-- Anchor Link to Introduction -->
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -19,8 +19,11 @@
         <a href="skills.html">Skill Sets</a>
     </nav>
     <main>
-        <h2>Purpose of the Site</h2>
-        <p>This site serves as a showcase of my personal website of skills, experiences, and accomplishments as I pursue professional opportunities.</p>
+        <!-- Introduction Section -->
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>Hi, I'm Maxwell Evans! I am passionate about following Jesus, solving complex problems, and creating innovative digital solutions. Welcome to my professional portfolio, where I showcase my skills and accomplishments.</p>
+        </section>
     </main>
     <footer>
         &copy; 2024 Maxwell Evans. All rights reserved.
